Fix page overflow from backcground image

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -326,6 +326,7 @@ position: fixed;
 
 .still {
   position: relative;
+  overflow: hidden;
   height: 100%;
   width: 100%;
   z-index: 1;
